typescript/checker/tests/conformance/classes/members/instanceAndStaticMembers/typeOfThisInInstanceMember2.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            262,
        ),
        hi: BytePos(
            263,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/members/instanceAndStaticMembers/typeOfThisInInstanceMember2.ts:21:5
   |
21 | var c: C<string>;
   |     ^

error: NoCallSignature {
    span: Span {
        lo: BytePos(
            346,
        ),
        hi: BytePos(
            350,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/members/instanceAndStaticMembers/typeOfThisInInstanceMember2.ts:26:11
   |
26 | var r3 = c.foo();
   |           ^^^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            387,
        ),
        hi: BytePos(
            389,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/members/instanceAndStaticMembers/typeOfThisInInstanceMember2.ts:28:18
   |
28 | var rs = [r, r2, r3];
   |                  ^^

